--- a/src/components/screens/TapGame/TapGame.css
+++ b/src/components/screens/TapGame/TapGame.css
@@ -36,7 +36,7 @@
 /* Анимация заполнения прогресса */
 .progress {
   height: 100%;
-  background-color: #4caf50;
+  background-color: #b0b0b0;
   transition: width 0.3s;
 }
 
