--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -132,3 +132,27 @@ button .button-icon::after {
     left: 50%;
     transform: translateX(-50%);
 }
+
+.confetti-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+  }
+  .confetti-container {
+    width: 100vw;  /* Полная ширина экрана */
+    height: 100vh; /* Полная высота экрана */
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    pointer-events: none; /* Чтобы клики не проходили через конфетти */
+  }
